fix: table has two scrollbar

--- a/src/pages/Component/class/index.less
+++ b/src/pages/Component/class/index.less
@@ -9,7 +9,7 @@
 
   :global {
     .ant-table-body {
-      height: auto !important;
+      // height: auto !important;
     }
   }
 }
@@ -17,9 +17,6 @@
 
 .page {
   :global {
-    .ant-table-body {
-      overflow: auto;
-      height: var(--height) !important;
-    }
+    .ant-table-body {}
   }
 }
